--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <script src="data.js"></script>
     <script src="script.js"></script>
     <script src="menu.js"></script>
-
+    <h4>&copy; Carmelo | Enrera | Gojo Cruz | Millares | Salonga</h4>
 </body>
 </html>
