--- a/pvp.html
+++ b/pvp.html
@@ -67,6 +67,7 @@
     <div id="scores">
         <p>Player X Score: <span id="scoreX">0</span></p>
         <p>Player O Score: <span id="scoreO">0</span></p>
+        <p>Draws: <span id="drawsCount">0</span></p>
     </div>
     <div id="back_btn">
         <a href="index.html">
