--- a/pvp.html
+++ b/pvp.html
@@ -74,6 +74,10 @@
             <button>RETURN</button>
         </a>
     </div>
+
+    <div id="popupContainer"></div>
+
+
     <script src="script.js"></script>
 </body>
 </html>
